--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@slack/webhook": "^7.0.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
@@ -20,6 +21,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "mongoose-delete": "^1.0.1",
-    "multer": "^1.4.5-lts.1"
+    "morgan-body": "^2.6.9",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.6.3",
+    "sequelize": "^6.35.0"
   }
 }
