--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "morgan-body": "^2.6.9",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
-    "sequelize": "^6.35.0"
+    "sequelize": "^6.35.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   }
 }
